--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ serde = {version = "1.0", features=["derive"]}
 toml = "0.5"
 arpabet = "1.0"
 crossbeam = "0.7"
+thiserror = "1.0"
 
 [profile.release]
 debug=true
