--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,8 @@ crossbeam = "0.7"
 thiserror = "1.0"
 structopt = "0.3"
 nix = "0.17"
+log = "0.4"
+simplelog="0.8"
 
 #[profile.release]
 #debug=true
